--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,12 @@
                     "/MIR"
                 ]
             },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "dedicated"
+            },
             "group": {
                 "kind": "build",
                 "isDefault": true
